# esp32c6-project

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/led/: CMakeLists.txt  Kconfig.projbuild  led.c
components/led/include/: led.h
components/wifi/: CMakeLists.txt  Kconfig.projbuild  wifi.c
components/wifi/include/: wifi.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.h
main/ap/include/: ap.h
main/ap/src/: ap.c
main/bsp/include/: bsp.h
main/bsp/src/: bsp.c
main/common/: def.h
main/hw/drivers/led/src/: led.c
